# operating-systems-lab

./: .gitignore
StarzykJakub/cw01/: _komentarz.txt  _uzycie_programu.txt
StarzykJakub/cw01/zad1/: Makefile  d_lib.c  d_lib.h  d_lib_internal.c  d_lib_internal.h
StarzykJakub/cw01/zad2/: d_test.c  raport2.txt
StarzykJakub/cw01/zad3a/: Makefile  d_lib_dl.c  d_lib_dl.h  results3a.txt  run_d_test.sh  run_d_test_dl.sh
StarzykJakub/cw01/zad3b/: Makefile  results3b.txt
StarzykJakub/cw02/zad1/: main.c  wyniki.txt
StarzykJakub/cw02/zad2/: main.c
StarzykJakub/cw03/zad1/: main.c  sym2
StarzykJakub/cw03/zad2/: main.c  test.txt
StarzykJakub/cw03/zad3/: Makefile  ltest.c  main.c  mtest.c  test.txt
StarzykJakub/cw04/zad1a/: Makefile  main.c
StarzykJakub/cw04/zad1b/: main.c  print_date.sh
StarzykJakub/cw04/zad2/: main.c
StarzykJakub/cw04/zad3/: Makefile  main.c
StarzykJakub/cw05/zad1/: main.c  test.txt
StarzykJakub/cw05/zad2/: Makefile  main.c  master.c  slave.c
StarzykJakub/cw06/zad1/: Makefile  client.c  common.h  msg.txt  server.c
StarzykJakub/cw06/zad2/: Makefile  client.c  common.h  main.c  msg.txt  server.c
StarzykJakub/cw07/zad1/: CMakeLists.txt  barber.c  customer.c  libbarber_shop.c  libbarber_shop.h
StarzykJakub/cw07/zad2/: CMakeLists.txt  barber.c  customer.c  libbarber_shop.c  libbarber_shop.h
StarzykJakub/cw08/zad1/: CMakeLists.txt  Times.txt  fil16.txt  fil4.txt  fil64.txt  gen_filter.c  main.c  run.sh
StarzykJakub/cw09/zad1/: CMakeLists.txt  cfg.txt  main.c
StarzykJakub/cw09/zad2/: CMakeLists.txt  cfg.txt  main.c
(+12 files in other folders)
